--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -128,3 +128,12 @@ $color-white: #fff;
 .bg-red {
     background-color: $bg-red !important;
 }
+
+.bg-dark {
+    background-color: #373737 !important;
+    color: #ffffff !important;
+}
+
+.border-gray {
+    border: 1px solid #d6d6d6;
+}
