--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
     padding: 0;
     margin: 0;
@@ -14,6 +14,7 @@ body {
 }
 * {
     margin: 0;
+    padding: 0;
 }
 html,
 body {
@@ -74,13 +75,13 @@ a {
 img {
     display: blodk;
     max-width: 100%;
-}
+} */
 
 .my-masonry-grid {
-    display: -webkit-box; /* Not needed if autoprefixing */
-    display: -ms-flexbox; /* Not needed if autoprefixing */
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    margin-left: -20px; /* gutter size offset */
+    margin-left: -20px;
     width: 100%;
 }
 .my-masonry-grid_column {
@@ -89,30 +90,7 @@ img {
 }
 
 .my-masonry-grid_column > div {
-    /* change div to reference your elements you put in <Masonry> */
     margin-bottom: 20px;
-}
-
-.scroll-tabs .nav-tabs .nav-item .nav-link {
-    width: 120px;
-    height: 44px;
-    border: 1px solid #d6d6d6;
-    background-color: #f1f1f1;
-    border-radius: 0;
-    color: #373737;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 11px;
-}
-
-.scroll-tabs .nav-tabs .nav-item:not(:last-child) .nav-link {
-    border-right: 0 !important;
-}
-
-.scroll-tabs .nav-tabs .nav-item .nav-link.active {
-    border: 1px solid #d6d6d6;
-    background-color: #ffffff;
 }
 
 .cat-delete {
@@ -134,12 +112,12 @@ img {
     color: #373737;
 }
 
-.border-gray {
-    border: 1px solid #d6d6d6;
-}
-
 .input-validation-error {
     color: #ff3b30;
     font-size: 12px;
     margin-bottom: 0px;
+}
+
+.min-w-0 {
+    min-width: 0;
 }
